--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+    <script src="//geodata.solutions/includes/countrystatecity.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLVqLsffGtvxr9GEKZkqc7i7wo2DmKrQo&libraries=places&callback=initAutocomplete"
+        async defer></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
