trying to fix manifest json error

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLVqLsffGtvxr9GEKZkqc7i7wo2DmKrQo&libraries=places&callback=initAutocomplete"
         async defer></script> -->
   </head>
-  <body>
+  <body aria-live="assertive">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
