--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -31,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Neighborhood Watch</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script src="//geodata.solutions/includes/countrystatecity.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLVqLsffGtvxr9GEKZkqc7i7wo2DmKrQo&libraries=places&callback=initAutocomplete"
